# neptune

./: .gitignore  README.md  context.txt  roadmap.md
k8s/: README.md  backend-deployment.yaml  indexer-deployment.yaml  ingress.yaml  kustomization.yaml  migrate-job.yaml  minio-config.yaml  minio-secret.yaml  minio-statefulset.yaml  namespace.yaml  ollama-deployment.yaml  postgres-config.yaml  postgres-secret.yaml  postgres-statefulset.yaml  server-env.template
neptune/: package.json
neptune-backend/: .env  Readme.md  requirements.txt  test_setup.py
neptune-backend/alembic/: env.py
neptune-backend/alembic/versions/: fe39d987cef1_initial_migration.py
neptune-backend/app/: indexer_app.py  main.py  server.py
neptune-backend/app/core/: logging.py  settings.py
neptune-backend/app/db/: __init__.py  database.py  models.py
neptune-backend/app/maintenance/: cleanup.py
neptune-backend/docs/: backend-refinement-log.md
neptune-backend/tests/: test_llm_service.py  test_note_content.py  test_prompts.py  test_revisions.py  test_search.py  test_settings.py
neptune-desktop/: .gitignore  Cargo.toml  tauri.conf.json
neptune-desktop/src/: lib.rs  main.rs
neptune-frontend/: FRONTEND_CONTEXT.md  next.config.ts  package-lock.json  package.json
neptune-frontend/app/: page.tsx
neptune-frontend/components/: FileSystemDisplay.js  KnowledgeGraph.js  NotesDisplay.js
neptune-frontend/lib/: api.ts
scripts/: build_backend_image.sh  build_indexer_image.sh  k8s_bootstrap.sh  k8s_deploy.sh  k8s_port_forward.sh  k8s_teardown.sh  k8s_tls.sh  run_web.sh
(+24 files in other folders)
